Change Swagger documentation
