# app/Http/Controllers/Api/V1/Auth/AuthController.php
@@ -71,6 +71,14 @@ class AuthController extends AbstractApiController
      *                 @OA\Property(property="access_token", type="string", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTI3LjAuMC4xOjgwMDAvYXBpL3JlZ2lzdGVyIiwiaWF0IjoxNjY0NTQxMDIwLCJleHAiOjE2NjQ1NDQ2MjAsIm5iZiI6MTY2NDU0MTAyMCwianRpIjoiRDE3M2YyYWxjWmE4NTViVyIsInN1YiI6IjIiLCJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.T1X55OPe7Fwr"),
      *                 @OA\Property(property="token_type", type="string", example="bearer"),
      *                 @OA\Property(property="expires_in", type="string", example="3600"),
+     *                 @OA\Property(property="user", type="object",
+     *                      @OA\Property(property="id", type="string", example="1"),
+     *                      @OA\Property(property="name", type="string", example="User"),
+     *                      @OA\Property(property="email", type="string", example="user@mail.com"),
+     *                      @OA\Property(property="email_verified_at", type="string", example="null"),
+     *                      @OA\Property(property="created_at", type="string", example="2022-12-22T15:14:06.000000Z"),
+     *                      @OA\Property(property="updated_at", type="string", example="2022-12-22T15:14:06.000000Z")
+     *                 )
      *             )
      *         )
      *     )
@@ -150,6 +158,15 @@ class AuthController extends AbstractApiController
      *                 @OA\Property(property="access_token", type="string", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTI3LjAuMC4xOjgwMDAvYXBpL3JlZ2lzdGVyIiwiaWF0IjoxNjY0NTQxMDIwLCJleHAiOjE2NjQ1NDQ2MjAsIm5iZiI6MTY2NDU0MTAyMCwianRpIjoiRDE3M2YyYWxjWmE4NTViVyIsInN1YiI6IjIiLCJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.T1X55OPe7Fwr"),
      *                 @OA\Property(property="token_type", type="string", example="bearer"),
      *                 @OA\Property(property="expires_in", type="string", example="3600"),
+     *                 @OA\Property(property="user", type="object",
+     *                      @OA\Property(property="id", type="string", example="1"),
+     *                      @OA\Property(property="name", type="string", example="User"),
+     *                      @OA\Property(property="email", type="string", example="user@mail.com"),
+     *                      @OA\Property(property="email_verified_at", type="string", example="null"),
+     *                      @OA\Property(property="created_at", type="string", example="2022-12-22T15:14:06.000000Z"),
+     *                      @OA\Property(property="updated_at", type="string", example="2022-12-22T15:14:06.000000Z"),
+     *                 )
+     *
      *             )
      *         )
      *     )
@@ -340,7 +357,8 @@ class AuthController extends AbstractApiController
         return [
             'access_token'  => $this->token,
             'token_type'    => 'bearer',
-            'expires_in'    => auth()->factory()->getTTL() * 60
+            'expires_in'    => auth()->factory()->getTTL() * 60,
+            'user'          => auth()->user()
         ];
     }
 }
